fixed spacing issues

--- a/scss/modules/_main.scss
+++ b/scss/modules/_main.scss
@@ -1,5 +1,6 @@
 .card{
     padding: 30px;
+    margin-bottom:20px;
 }
 
 .card ol{
@@ -25,4 +26,7 @@
     }
 }
 
+.table th, .table td{
+    padding: 0.85rem;
+}
 
